syntax = "proto3";

package protomodel;

option go_package = "/protomodel";

message User{
  string id = 1;
  string name = 2;
  string email = 3;
  string phoneno = 4;
  string password = 5;
}

message CreateUserReq{
  User user = 1;
}

message CreateUserRes {
  User user = 1;
}

service UserService {
  rpc CreateUser (CreateUserReq) returns (CreateUserRes);
}